--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -48,6 +48,25 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="TextView" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
+
+            <Button
+                android:id="@+id/btShowDevices"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="show devices" />
+
+            <Button
+                android:id="@+id/btResetDb"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="reset db" />
+
+        </LinearLayout>
+
     </LinearLayout>
 
 </ScrollView>
