--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.a09_blauzahn.MainActivity" >
+    tools:context="com.example.a09_blauzahn.ActivityMain" >
 
     <LinearLayout
         android:layout_width="match_parent"
