--- a/res/layout/activity_sighting_list.xml
+++ b/res/layout/activity_sighting_list.xml
@@ -10,10 +10,11 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.a09_blauzahn.ActivitySightingList" >
 
-    <TextView
-        android:layout_width="wrap_content"
+    <Button
+        android:id="@+id/btCloseListSightingComplete"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+        android:text="@string/btCloseListSightingComplete" />
 
     <ListView
         android:id="@+id/lv1sightingComplete"
