--- a/res/layout/list_sighting_complete.xml
+++ b/res/layout/list_sighting_complete.xml
@@ -2,67 +2,23 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:padding="4dp" >
 
-    <LinearLayout
+    <TextView
+        android:id="@+id/tvList1label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical" >
+        android:layout_margin="2sp"
+        android:text="id (sessionId) time [address] -db"
+        android:textSize="10sp" />
 
-        <TextView
-            android:id="@+id/tvList1id"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="2sp"
-            android:text="id" />
-
-        <TextView
-            android:id="@+id/tvList1sessionId"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="2sp"
-            android:text="sessionId" />
-    </LinearLayout>
-
-    <LinearLayout
+    <TextView
+        android:id="@+id/tvList1name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical" >
-
-        <TextView
-            android:id="@+id/tvList1address"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="2sp"
-            android:text="address" />
-
-        <TextView
-            android:id="@+id/tvList1time"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="2sp"
-            android:text="time" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical" >
-
-        <TextView
-            android:id="@+id/tvList1name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="2sp"
-            android:text="name" />
-
-        <TextView
-            android:id="@+id/tvList1rssi"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="2sp"
-            android:text="rssi" />
-    </LinearLayout>
+        android:layout_gravity="right"
+        android:layout_margin="2sp"
+        android:text="name" />
 
 </LinearLayout>
