--- a/res/layout/list_device.xml
+++ b/res/layout/list_device.xml
@@ -4,17 +4,10 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal" >
 
-    <TextView
-        android:id="@+id/tvList2id"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:layout_margin="2sp"
-        android:text="#id" />
-
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:gravity="right"
         android:orientation="vertical" >
 
         <TextView
@@ -22,7 +15,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="2sp"
-            android:text="(sessionCount) firstTime lastTime"
+            android:text="firstTime (sessionCount)"
             android:textSize="10sp" />
 
         <TextView
@@ -30,9 +23,17 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="2sp"
-            android:text="avg -db [address] name"
+            android:text="lastTime avgRssi [address]"
             android:textSize="10sp" />
 
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/tvList2names"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:text="name(s)"
+        android:textSize="12sp" />
 
 </LinearLayout>
