--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,99 +1,113 @@
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/ScrollView1"
+    android:id="@+id/LinearLayout1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.a09_blauzahn.ActivityMain" >
 
+    <TextView
+        android:id="@+id/tvLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/hello_world" />
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical" >
+        android:layout_height="wrap_content" >
 
-        <TextView
-            android:id="@+id/tvLabel"
+        <Button
+            android:id="@+id/btConnect"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/hello_world" />
+            android:padding="6dp"
+            android:text="@string/btConnect"
+            android:textSize="12sp" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
-
-            <Button
-                android:id="@+id/btConnect"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="6dp"
-                android:text="@string/btConnect"
-                android:textSize="12sp" />
-
-            <Button
-                android:id="@+id/btDisconnect"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="6dp"
-                android:text="@string/btDisconnect"
-                android:textSize="12sp" />
-
-            <Button
-                android:id="@+id/btRefresh"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="6dp"
-                android:text="@string/btRefresh"
-                android:textSize="12sp" />
-
-        </LinearLayout>
-
-        <TextView
-            android:id="@+id/tvLog"
+        <Button
+            android:id="@+id/btDisconnect"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/tvLog" />
+            android:padding="6dp"
+            android:text="@string/btDisconnect"
+            android:textSize="12sp" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
+        <Button
+            android:id="@+id/btRefresh"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="6dp"
+            android:text="@string/btRefresh"
+            android:textSize="12sp" />
 
-            <Button
-                android:id="@+id/btShowNetInfo"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="6dp"
-                android:text="@string/btShowNetInfo"
-                android:textSize="12sp" />
-
-            <Button
-                android:id="@+id/btResetDb"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="6dp"
-                android:text="@string/btResetDb"
-                android:textSize="12sp" />
-
-            <Button
-                android:id="@+id/btShowSightings"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="6dp"
-                android:text="@string/btShowSightingsComplete"
-                android:textSize="12sp" />
-
-            <Button
-                android:id="@+id/btShowDevices"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="6dp"
-                android:text="@string/btShowDevices"
-                android:textSize="12sp" />
-
-        </LinearLayout>
+        <Button
+            android:id="@+id/btResetDb"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="6dp"
+            android:text="@string/btResetDb"
+            android:textSize="12sp" />
 
     </LinearLayout>
 
-</ScrollView>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+
+        <Button
+            android:id="@+id/btShowNetInfo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="6dp"
+            android:text="@string/btShowNetInfo"
+            android:textSize="12sp" />
+
+        <Button
+            android:id="@+id/btShowSightings"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="6dp"
+            android:text="@string/btShowSightingsComplete"
+            android:textSize="12sp" />
+
+        <Button
+            android:id="@+id/btShowDevices"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="6dp"
+            android:text="@string/btShowDevices"
+            android:textSize="12sp" />
+
+        <Button
+            android:id="@+id/btShowSessions"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="6dp"
+            android:text="@string/btShowSessions"
+            android:textSize="12sp" />
+
+    </LinearLayout>
+
+    <ScrollView
+        android:id="@+id/scrollView2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical" >
+
+            <TextView
+                android:id="@+id/tvLog"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/tvLog" />
+        </LinearLayout>
+    </ScrollView>
+
+</LinearLayout>
