--- a/res/layout-land/activity_main.xml
+++ b/res/layout-land/activity_main.xml
@@ -48,8 +48,10 @@
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" >
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:gravity="center_horizontal|center_vertical" >
 
             <Button
                 android:id="@+id/btShowNetInfo"
@@ -65,6 +67,37 @@
                 android:text="@string/btResetDb"
                 android:textSize="12sp" />
         </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal" >
+
+            <Button
+                android:id="@+id/btShowSightings"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="6dp"
+                android:text="@string/btShowSightingsComplete"
+                android:textSize="12sp" />
+
+            <Button
+                android:id="@+id/btShowDevices"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="6dp"
+                android:text="@string/btShowDevices"
+                android:textSize="12sp" />
+
+            <Button
+                android:id="@+id/btShowSessions"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="6dp"
+                android:text="@string/btShowSessions"
+                android:textSize="12sp" />
+        </LinearLayout>
+
     </LinearLayout>
 
     <ScrollView
@@ -81,7 +114,9 @@
                 android:id="@+id/tvLog"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/tvLog" />
+                android:text="@string/tvLog"
+                android:textSize="10sp" />
+
         </LinearLayout>
     </ScrollView>
 
