--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -106,7 +106,9 @@
                 android:id="@+id/tvLog"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/tvLog" />
+                android:text="@string/tvLog"
+                android:textSize="10sp" />
+
         </LinearLayout>
     </ScrollView>
 
