--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -10,48 +10,84 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.a09_blauzahn.ActivityMain" >
 
-    <TextView
-        android:id="@+id/tvLabel"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+        android:orientation="vertical" >
+
+        <CheckBox
+            android:id="@+id/cbWifi"
+            android:layout_width="wrap_content"
+            android:layout_height="24dp"
+            android:padding="0dp"
+            android:text="@string/cbWifi"
+            android:textSize="12sp" />
+
+        <CheckBox
+            android:id="@+id/cbAutoScan"
+            android:layout_width="wrap_content"
+            android:layout_height="24dp"
+            android:height="24dp"
+            android:padding="0dp"
+            android:text="@string/cbAutoString"
+            android:textSize="12sp" />
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
 
-        <Button
-            android:id="@+id/btConnect"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="6dp"
-            android:text="@string/btConnect"
+        <TextView
+            android:id="@+id/tvLabel"
+            android:layout_width="148dp"
+            android:layout_height="138dp"
+            android:layout_weight="0.49"
+            android:text="@string/tvLog"
             android:textSize="12sp" />
 
-        <Button
-            android:id="@+id/btDisconnect"
+        <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="6dp"
-            android:text="@string/btDisconnect"
-            android:textSize="12sp" />
+            android:layout_height="match_parent"
+            android:layout_gravity="right"
+            android:gravity="right"
+            android:orientation="vertical" >
 
-        <Button
-            android:id="@+id/btRefresh"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="6dp"
-            android:text="@string/btRefresh"
-            android:textSize="12sp" />
+            <Button
+                android:id="@+id/btConnect"
+                android:layout_width="wrap_content"
+                android:layout_height="32dp"
+                android:height="24dp"
+                android:padding="6dp"
+                android:text="@string/btConnect"
+                android:textSize="12sp" />
 
-        <Button
-            android:id="@+id/btResetDb"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="6dp"
-            android:text="@string/btResetDb"
-            android:textSize="12sp" />
+            <Button
+                android:id="@+id/btDisconnect"
+                android:layout_width="wrap_content"
+                android:layout_height="32dp"
+                android:height="24dp"
+                android:padding="6dp"
+                android:text="@string/btDisconnect"
+                android:textSize="12sp" />
 
+            <Button
+                android:id="@+id/btRefresh"
+                android:layout_width="wrap_content"
+                android:layout_height="32dp"
+                android:height="24dp"
+                android:padding="6dp"
+                android:text="@string/btRefresh"
+                android:textSize="12sp" />
+
+            <Button
+                android:id="@+id/btResetDb"
+                android:layout_width="wrap_content"
+                android:layout_height="32dp"
+                android:height="24dp"
+                android:padding="6dp"
+                android:text="@string/btResetDb"
+                android:textSize="12sp" />
+        </LinearLayout>
     </LinearLayout>
 
     <LinearLayout
@@ -59,17 +95,10 @@
         android:layout_height="wrap_content" >
 
         <Button
-            android:id="@+id/btShowNetInfo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="6dp"
-            android:text="@string/btShowNetInfo"
-            android:textSize="12sp" />
-
-        <Button
             android:id="@+id/btShowSightings"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="32dp"
+            android:height="24dp"
             android:padding="6dp"
             android:text="@string/btShowSightingsComplete"
             android:textSize="12sp" />
@@ -77,7 +106,8 @@
         <Button
             android:id="@+id/btShowDevices"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="32dp"
+            android:height="24dp"
             android:padding="6dp"
             android:text="@string/btShowDevices"
             android:textSize="12sp" />
@@ -85,11 +115,11 @@
         <Button
             android:id="@+id/btShowSessions"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="32dp"
+            android:height="24dp"
             android:padding="6dp"
             android:text="@string/btShowSessions"
             android:textSize="12sp" />
-
     </LinearLayout>
 
     <ScrollView
@@ -108,7 +138,6 @@
                 android:layout_height="wrap_content"
                 android:text="@string/tvLog"
                 android:textSize="10sp" />
-
         </LinearLayout>
     </ScrollView>
 
