--- a/res/layout-land/activity_main.xml
+++ b/res/layout-land/activity_main.xml
@@ -19,7 +19,8 @@
             android:id="@+id/tvLabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/hello_world" />
+            android:text="@string/hello_world"
+            android:textSize="12sp" />
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -54,24 +55,11 @@
             android:gravity="center_horizontal|center_vertical" >
 
             <Button
-                android:id="@+id/btShowNetInfo"
-                android:layout_width="wrap_content"
-                android:layout_height="32dp"
-                android:text="@string/btShowNetInfo"
-                android:textSize="12sp" />
-
-            <Button
                 android:id="@+id/btResetDb"
                 android:layout_width="wrap_content"
                 android:layout_height="32dp"
                 android:text="@string/btResetDb"
                 android:textSize="12sp" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_horizontal" >
 
             <Button
                 android:id="@+id/btShowSightings"
@@ -96,29 +84,25 @@
                 android:padding="6dp"
                 android:text="@string/btShowSessions"
                 android:textSize="12sp" />
+
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" >
+            android:orientation="horizontal" >
 
             <CheckBox
                 android:id="@+id/cbWifi"
                 android:layout_width="wrap_content"
-                android:layout_height="24dp"
-                android:padding="0dp"
-                android:text="@string/cbWifi"
-                android:textSize="12sp" />
+                android:layout_height="wrap_content"
+                android:text="@string/cbWifi" />
 
             <CheckBox
                 android:id="@+id/cbAutoScan"
                 android:layout_width="wrap_content"
-                android:layout_height="24dp"
-                android:height="24dp"
-                android:padding="0dp"
-                android:text="@string/cbAutoString"
-                android:textSize="12sp" />
+                android:layout_height="wrap_content"
+                android:text="@string/cbAutoString" />
         </LinearLayout>
 
     </LinearLayout>
