--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -13,24 +13,20 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical" >
+        android:orientation="horizontal" >
 
         <CheckBox
             android:id="@+id/cbWifi"
             android:layout_width="wrap_content"
-            android:layout_height="24dp"
-            android:padding="0dp"
-            android:text="@string/cbWifi"
-            android:textSize="12sp" />
+            android:layout_height="wrap_content"
+            android:text="@string/cbWifi" />
 
         <CheckBox
             android:id="@+id/cbAutoScan"
             android:layout_width="wrap_content"
-            android:layout_height="24dp"
-            android:height="24dp"
-            android:padding="0dp"
-            android:text="@string/cbAutoString"
-            android:textSize="12sp" />
+            android:layout_height="wrap_content"
+            android:text="@string/cbAutoString" />
+
     </LinearLayout>
 
     <LinearLayout
@@ -40,8 +36,7 @@
         <TextView
             android:id="@+id/tvLabel"
             android:layout_width="148dp"
-            android:layout_height="138dp"
-            android:layout_weight="0.49"
+            android:layout_height="wrap_content"
             android:text="@string/tvLog"
             android:textSize="12sp" />
 
@@ -88,38 +83,40 @@
                 android:text="@string/btResetDb"
                 android:textSize="12sp" />
         </LinearLayout>
-    </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
-
-        <Button
-            android:id="@+id/btShowSightings"
+        <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="32dp"
-            android:height="24dp"
-            android:padding="6dp"
-            android:text="@string/btShowSightingsComplete"
-            android:textSize="12sp" />
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
 
-        <Button
-            android:id="@+id/btShowDevices"
-            android:layout_width="wrap_content"
-            android:layout_height="32dp"
-            android:height="24dp"
-            android:padding="6dp"
-            android:text="@string/btShowDevices"
-            android:textSize="12sp" />
+            <Button
+                android:id="@+id/btShowSightings"
+                android:layout_width="wrap_content"
+                android:layout_height="32dp"
+                android:height="24dp"
+                android:padding="6dp"
+                android:text="@string/btShowSightingsComplete"
+                android:textSize="12sp" />
 
-        <Button
-            android:id="@+id/btShowSessions"
-            android:layout_width="wrap_content"
-            android:layout_height="32dp"
-            android:height="24dp"
-            android:padding="6dp"
-            android:text="@string/btShowSessions"
-            android:textSize="12sp" />
+            <Button
+                android:id="@+id/btShowDevices"
+                android:layout_width="wrap_content"
+                android:layout_height="32dp"
+                android:height="24dp"
+                android:padding="6dp"
+                android:text="@string/btShowDevices"
+                android:textSize="12sp" />
+
+            <Button
+                android:id="@+id/btShowSessions"
+                android:layout_width="wrap_content"
+                android:layout_height="32dp"
+                android:height="24dp"
+                android:padding="6dp"
+                android:text="@string/btShowSessions"
+                android:textSize="12sp" />
+        </LinearLayout>
+
     </LinearLayout>
 
     <ScrollView
