--- a/res/layout/list_session.xml
+++ b/res/layout/list_session.xml
@@ -21,7 +21,8 @@
         <TextView
             android:id="@+id/tvList3label"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="center_vertical"
             android:text="startTime\nstopTime"
             android:textSize="10sp" />
 
@@ -34,6 +35,6 @@
         android:layout_gravity="center_vertical"
         android:gravity="center_vertical"
         android:text="# &amp; names of devices"
-        android:textSize="12sp" />
+        android:textSize="11sp" />
 
 </LinearLayout>
