* minor improvement to session list item display readability * adding a new button to main activity for changing system time/date (not yet functional)

--- a/res/layout-land/activity_main.xml
+++ b/res/layout-land/activity_main.xml
@@ -110,6 +110,15 @@
             android:layout_height="wrap_content" >
 
             <Button
+                android:id="@+id/btCalendar"
+                android:layout_width="wrap_content"
+                android:layout_height="32dp"
+                android:height="24dp"
+                android:padding="6dp"
+                android:text="@string/btCalendar"
+                android:textSize="12sp" />
+
+            <Button
                 android:id="@+id/btExport"
                 android:layout_width="wrap_content"
                 android:layout_height="32dp"
@@ -120,7 +129,7 @@
 
             <Button
                 android:id="@+id/btExit"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="32dp"
                 android:height="24dp"
                 android:padding="6dp"
