* removed some string duplications * added "try pairing" button to sighting list item onClick

--- a/res/layout/dialog_listitem_btsession.xml
+++ b/res/layout/dialog_listitem_btsession.xml
@@ -31,6 +31,6 @@
         android:id="@+id/btBTSessionExit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/btBTSessionExit" />
+        android:text="@string/btBTDeviceExit" />
 
 </LinearLayout>
