--- a/res/layout/list_wifisighting.xml
+++ b/res/layout/list_wifisighting.xml
@@ -9,15 +9,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingLeft="4dp"
-        android:text="#id (#session) timestamp [address] avg.db" />
+        android:text="#id (#session) t i m e s t a m p [a d d r e s s] avg.db"
+        android:textSize="10sp" />
 
     <TextView
         android:id="@+id/tvList5label2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="right"
-        android:layout_marginTop="-8sp"
+        android:layout_marginTop="-6sp"
         android:paddingRight="4dp"
-        android:text="name(s)" />
+        android:text="one or possibly many name(s)"
+        android:textSize="12sp" />
 
 </LinearLayout>
